--- a/app/src/main/res/layout/mainfabs.xml
+++ b/app/src/main/res/layout/mainfabs.xml
@@ -42,17 +42,17 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="10dp"
         android:elevation="6dp"
-        android:src="@drawable/ic_filter_white"
+        android:src="@drawable/ic_filter"
         android:visibility="visible"
         app:backgroundTint="@color/colorAccent"
+        android:tint="@color/white"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="mini"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fab_search"
         app:pressedTranslationZ="12dp"
-        app:rippleColor="@android:color/white"
-        tools:fabSize="auto" />
+        app:rippleColor="@android:color/white" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_mylocation"
@@ -61,7 +61,8 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="10dp"
         android:elevation="6dp"
-        android:src="@drawable/ic_my_location_weiss"
+        android:src="@drawable/ic_my_location"
+        android:tint="@color/white"
         android:visibility="visible"
         app:backgroundTint="@color/colorAccent"
         app:borderWidth="0dp"
