--- a/app/src/main/res/layout/mainlayout3.xml
+++ b/app/src/main/res/layout/mainlayout3.xml
@@ -71,15 +71,16 @@
 
         </View>
 
-        <ImageView
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/buttonMapStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
-            android:alpha="0.4"
-            android:background="@color/colorPrimary"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/ic_layers"
+            app:backgroundTint="#ffffff"
+            app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -188,7 +189,8 @@
         layout="@layout/startupscreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible" />
+        android:visibility="visible"
+        tools:visibility="gone"/>
 
     <include
         android:id="@+id/include_eula"
