--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="MyLightTheme" parent="Theme.AppCompat.Light.NoActionBar" >
+    <style name="MyLightTheme" parent="Theme.MaterialComponents.Light.NoActionBar" >
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -11,7 +11,7 @@
         <item name="android:textColorPrimaryInverse">@color/textColorPrimary</item>
 
     </style>
-    <style name="MyCheckBox" parent="Theme.AppCompat.Light">
+    <style name="MyCheckBox" parent="Theme.MaterialComponents.Light">
         <item name="colorControlNormal">@color/colorCard</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
