--- a/app/src/main/res/layout-land/fragment_infoview.xml
+++ b/app/src/main/res/layout-land/fragment_infoview.xml
@@ -94,7 +94,7 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/icard_fault"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -111,7 +111,7 @@
             android:text="@string/ifault_report"
             android:textColor="@color/textColorPrimaryInverse"
             android:visibility="gone" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/iUpdated"
@@ -128,7 +128,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:paddingBottom="5dp"
 android:clipToPadding="false">
-<android.support.design.widget.FloatingActionButton
+<com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/fab_directions"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
