--- a/app/src/main/res/layout/errormessage.xml
+++ b/app/src/main/res/layout/errormessage.xml
@@ -43,7 +43,7 @@
             android:foregroundGravity="top|right"
             android:gravity="top|right">
 
-                <android.support.design.widget.FloatingActionButton
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/fab_retry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
