--- a/app/src/main/res/layout/filterlisteneintrag_preset.xml
+++ b/app/src/main/res/layout/filterlisteneintrag_preset.xml
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true" />
 
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/preset_action_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
