--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -14,13 +14,13 @@
             android:layout_height="wrap_content">
 
 
-            <android.support.design.widget.AppBarLayout
+            <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 
-                <android.support.design.widget.TabLayout
+                <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tabs"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
                     app:tabMode="scrollable"
                     app:tabSelectedTextColor="?android:attr/textColorPrimary"
                     app:tabTextColor="@color/textColorPrimaryInverse" />
-            </android.support.design.widget.AppBarLayout>
+            </com.google.android.material.appbar.AppBarLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                     android:textIsSelectable="false"
                     android:textStyle="bold" />
 
-                <android.support.v4.view.ViewPager
+                <androidx.viewpager.widget.ViewPager
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -56,7 +56,7 @@
                     android:layout_marginTop="30dp"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                </android.support.v4.view.ViewPager>
+                </androidx.viewpager.widget.ViewPager>
             </RelativeLayout>
 
         </LinearLayout>
