--- a/app/src/main/res/layout/fragment_infoview.xml
+++ b/app/src/main/res/layout/fragment_infoview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/InfoContainer"
@@ -81,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="@string/icreate_chargeev" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/icard_fault"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,7 +104,7 @@
             android:text="@string/ifault_report"
             android:textColor="@color/textColorPrimaryInverse"
             android:visibility="visible" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/iUpdated"
@@ -128,7 +128,7 @@
         android:visibility="gone" />
 
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_directions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -165,4 +165,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.493" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
